assets/css/style.css
#myVideo {
  width: 100%;
  height; 100%
  object-fit: cover;
  overflow: hidden;
  min-width: 100%; 
  min-height: 100%;
}
.w3-theme-l5 {color:#000 !important; background-color:#f0f6f8 !important}
.w3-theme-l4 {color:#000 !important; background-color:#cde0e7 !important}
.w3-theme-l3 {color:#000 !important; background-color:#9bc2d0 !important}
.w3-theme-l2 {color:#fff !important; background-color:#69a3b8 !important}
.w3-theme-l1 {color:#fff !important; background-color:#457e93 !important}
.w3-theme-d1 {color:#fff !important; background-color:#294b57 !important}
.w3-theme-d2 {color:#fff !important; background-color:#25434e !important}
.w3-theme-d3 {color:#fff !important; background-color:#203a44 !important}
.w3-theme-d4 {color:#fff !important; background-color:#1b323a !important}
.w3-theme-d5 {color:#fff !important; background-color:#172a31 !important}

.w3-theme-light {color:#000 !important; background-color:#f0f6f8 !important}
.w3-theme-dark {color:#fff !important; background-color:#172a31 !important}
.w3-theme-action {color:#fff !important; background-color:#172a31 !important}

.w3-theme {color:#fff !important; background-color:#2e5361 !important}
.w3-text-theme {color:#2e5361 !important}
.w3-border-theme {border-color:#2e5361 !important}

.w3-hover-theme:hover {color:#fff !important; background-color:#2e5361 !important}
.w3-hover-text-theme:hover {color:#2e5361 !important}
.w3-hover-border-theme:hover {border-color:#2e5361 !important}
/* font*/

body,h1,h2,h3,h4,h5,h6 {font-family: 'Space Mono', monospace;}

img {
  width: 100%;
  height: 400px;
  background-repeat: no-repeat;
  background-size: contain;
}

.container {
    padding-bottom: 0px;
}
.image.primary {
    display: block!important;
    
}

 .title {background: rgba(0, 0, 0, 0.5);
 }

